<resources>
    <string name="app_name">app4</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="launch_screen">Launch Screen</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="outside_services">Outside Services</string>
    <string name="garage_services">Garage Services</string>
    <string name="list_requests">Request List</string>
    <string name="profile">Profile</string>
    <string name="Help_center">Help Center</string>
    <string name="services">Services</string>
    <string name="mechanic">Mechanic</string>
    <string name="request">Request</string>
    <string name="help">Help</string>
    <string name="chat">Chat</string>
    <string name="help_line">Help Line</string>
    <string name="faq">FAQ</string>
    <string name="links">Links</string>
    <string name="msngr">Messenger</string>
    <string name="insta">Instagram</string>
    <string name="wassap">Whatsapp</string>
    <string name="default_info_title">Default info title</string>
    <string name="default_info_snippet">Default info snippet</string>
    <string name="pick_place">Pick a place</string>
    <string name="signin">Sign In</string>
    <string name="skip">"Continue  "</string>
    <string name="skipp">Whitout Log In</string>
    <string name="checkup">Check Up</string>
    <string name="cancel">Cancel</string>
    <string name="cleaning">Cleaning</string>
    <string name="spin">SPIn</string>
    <string name="profil">Profile</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="adress">Address</string>
    <string name="chatt">24/7</string>
    <string name="helpp">anyhelp</string>
    <string name="faqq">Find Answers To Your Questions</string>
    <string name="instaa">Join Us On Instagram</string>
    <string name="wassapp">Join Us On Whatsapp</string>
    <string name="fb">Join Us On Facebook</string>
    <string name="option_get_place">Get Place</string>
    <string name="APIkey">AIzaSyDxklwNV2U-OK_zc4KrgdmaEyAjf81taAo</string>
    <string name="team">Team</string>
    <string name="appointment">Appointment</string>
    <string name="Lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="address">Address</string>
    <string name="FASTrep">FASTrep</string>
    <string name="Next">Next</string>
    <string name="fuel">Fuel</string>
    <string name="oil">Oil</string>
    <string name="tow_truck">Tow Truck</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="code">Code</string>
    <string name="resend">Resend</string>
    <string name="requests">Requests</string>
    <string name="fastrep">Fastrep</string>
    <string name="garage">Garage</string>
    <string name="your_address">Your Address:</string>
    <string name="price">Price:</string>
    <string name="statee">State:</string>
    <string name="list_mechanics">List Mechanics</string>
    <string name="vehicule">Vehicule</string>
    <string name="tow">Tow</string>
    <string name="requested">Requested:</string>
    <string name="on">On</string>
    <string name="onn">On:</string>
    <string name="oil_fuel"><![CDATA[Oil & Fuel]]></string>
    <string name="type">Type:</string>
    <string name="mark">Mark:</string>
    <string name="list_taxi">List Taxi</string>
    <string name="list_stations">List Stations</string>
    <string name="vehicle">Vehicle</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="see_vehicles">See Vehicles</string>
    <string name="_213">+213</string>
    <string name="typee">Type:</string>
    <string name="markk">Mark:</string>
    <string name="modell">Model:</string>
    <string name="model">Model</string>
    <string name="matriculation_number">Matriculation Number:</string>
    <string name="garages">Garages</string>
    <string name="mechanics">Mechanics</string>
    <string name="stations">Stations</string>
    <string name="station">Station</string>
    <string name="your_vehicle">Your Vehicle</string>
    <string name="see_your_vehicles">See Your Vehicles</string>
    <string name="languages">Languages</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="you_already_have_an_account_welcome_back">You already have an account! Welcome back</string>
    <string name="you_already_have_an_account">You Already Have An Account?</string>
    <string name="you_are_new_join_us_here">You Are New? Join Us Here</string>
    <string name="you_are_new_here_join_us">You Are New Here? Join Us!</string>
    <string name="codee">Code:</string>
    <string name="_00_00_00">00-00-00</string>
    <string name="_123_456_789">123-456-789</string>
    <string name="description">Description:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log_in">Log In</string>
    <string name="list_tows">List Tows</string>
    <string name="taxi">Taxi</string>
    <string name="ambulance">Ambulance</string>
    <string name="vehicle_type_mark_model">Vehicle type, Mark, Model...</string>
    <string name="number_of_passenger">Number of passenger:</string>
    <string name="service">Service:</string>
    <string name="confirm">Confirm</string>
    <string name="tari9">Tari9</string>
    <string name="are_you_sure_you_want_to_cancel_your_request">Are You Sure You Want To Cancel Your Request?</string>
    <string name="you_want_to_add_this_vehicle_to_your_collection">You want to add this vehicle to your collection?</string>
    <string name="join_us_on_facebook">Join Us On Facebook</string>
    <string name="phone_number_">Pone Number:</string>
    <string name="requested_">Requested:</string>
    <string name="services_">Services:</string>
    <string name="on_">On:</string>
    <string name="address_">Address:</string>
    <string name="vehicle_">Vehicle:</string>
    <string name="total_">Total:</string>
    <string name="passenger_nbr_">Passenger Number:</string>
    <string name="here">Here</string>
    <string name="confirm_request">Your Request Has been Confirmed, Do You Want To Call Them Directly Or Copy Their Number?</string>
    <string name="you_are_new">Are You New?</string>
    <string name="_000_000_000">000-000-000</string>
    <string name="delete">Are You Sure You Want To Delete All Your Informations?</string>
    <string name="list_requestss">Requests</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="litre">L</string>
    <string name="da">DA</string>
    <string name="about_us">About us</string>
</resources>