<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_blackish">

    <RelativeLayout
        android:id="@+id/header"
        style="@style/header">

        <Button
            android:id="@+id/goback"
            style="@style/go_back"/>
        <TextView
            style="@style/text_page_title_profile"
            android:text="@string/Help_center"/>
        <Button
            android:id="@+id/settings"
            style="@style/settings"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/help_center_text_title"
            android:text="@string/help" />
    <LinearLayout
        android:id="@+id/chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="18dp"
        android:clickable="true">
        <Button
            style="@style/chat"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="18dp">
        <TextView
            style="@style/help_center_text"
            android:text="@string/chat"/>
        <TextView
            style="@style/help_center_text_small"
            android:layout_gravity="right"
            android:text="@string/chatt"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/helpline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clickable="true"
        android:layout_marginHorizontal="18dp">
        <Button
            style="@style/call"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="18dp">
            <TextView
                style="@style/help_center_text"
                android:text="@string/help_line"/>
            <TextView
                style="@style/help_center_text_small"
                android:layout_gravity="right"
                android:text="@string/helpp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
        android:clickable="true"
            android:layout_marginHorizontal="18dp">
            <Button
                style="@style/faq"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="18dp">
                <TextView
                    style="@style/help_center_text"
                    android:text="@string/faq"/>
                <TextView
                    style="@style/help_center_text_small"
                    android:layout_gravity="right"
                    android:text="@string/faqq"/>
            </LinearLayout>
    </LinearLayout>

        <TextView
            style="@style/help_center_text_title"
            android:text="@string/links"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="18dp">
            <Button
                style="@style/messenger"/>
            <LinearLayout
                android:id="@+id/messenger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="18dp"
                android:clickable="true">
                <TextView
                    style="@style/help_center_text"
                    android:text="@string/msngr"/>
                <TextView
                    style="@style/help_center_text_small"
                    android:layout_gravity="right"
                    android:text="@string/join_us_on_facebook"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="18dp">
            <Button
                style="@style/instagram"/>
            <LinearLayout
                android:id="@+id/instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="18dp"
                android:clickable="true">
                <TextView
                    style="@style/help_center_text"
                    android:text="@string/insta"/>
                <TextView
                    style="@style/help_center_text_small"
                    android:layout_gravity="right"
                    android:text="@string/instaa"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="18dp">
            <Button
                style="@style/whatsapp"/>
            <LinearLayout
                android:id="@+id/whatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="18dp"
                android:clickable="true">
                <TextView
                    style="@style/help_center_text"
                    android:text="@string/wassap"/>
                <TextView
                    style="@style/help_center_text_small"
                    android:layout_gravity="right"
                    android:text="@string/wassapp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>