<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up"
    android:padding="20dp"
    tools:context=".sign_up">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/full_name"
                    style="@style/small_text"
                    android:layout_gravity="right"
                    android:textSize="22sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/firstname"
                        android:layout_weight="1"
                        android:hint="@string/firstname"
                        android:inputType="text"
                        android:layout_marginEnd="12dp"
                        style="@style/style_edit_text"/>
                    <EditText
                        android:id="@+id/lastname"
                        style="@style/style_edit_text"
                        android:layout_weight="1"
                        android:hint="@string/Lastname"
                        android:inputType="text" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/phone_nbr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_gravity="right"
                    android:text="@string/phone_number"
                    style="@style/small_text"
                    android:textSize="22sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        style="@style/style_edit_text"
                        android:id="@+id/fphone"
                        android:layout_weight="4"
                        android:hint="@string/_213"
                        android:text="@string/_213"
                        android:layout_marginEnd="12dp"
                        android:inputType="phone"/>
                    <EditText
                        android:id="@+id/phone"
                        style="@style/style_edit_text"
                        android:layout_weight="1.5"
                        android:hint="@string/_123_456_789"
                        android:inputType="phone" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/codee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    style="@style/small_text"
                    android:layout_gravity="right"
                    android:text="@string/codee"
                    android:textSize="22sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/code"
                        style="@style/style_edit_text"
                        android:layout_weight="5"
                        android:hint="@string/_00_00_00"
                        android:inputType="phone"/>
                    <Button
                        android:id="@+id/signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/sign_up"
                        android:paddingVertical="16dp"
                        android:textColor="#fff"
                        android:background="@drawable/style_button"/>
                    <TextView
                        android:id="@+id/resend"
                        style="@style/link_text"
                        android:padding="5dp"
                        android:text="@string/resend"
                        android:layout_gravity="right"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/next"
                style="@style/button_sign_in"
                android:text="@string/Next" />
            <LinearLayout
                android:id="@+id/loginn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/login"
                    android:text="@string/log_in"
                    android:clickable="true"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:gravity="left"
                    style="@style/link_text"/>
                <TextView
                    style="@style/small_text"
                    android:text="@string/you_already_have_an_account"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>


</RelativeLayout>