<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    tools:context=".profile">

    <RelativeLayout
        android:id="@+id/header"
        style="@style/header">

        <Button
            android:id="@+id/goback"
            style="@style/go_back"
            android:background="@drawable/left"/>

        <TextView
            style="@style/text_page_title"
            android:text="@string/profile"/>
        <Button
            android:id="@+id/settings"
            style="@style/settings"
            android:background="@drawable/settings"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:gravity="center"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1">
            <ImageView
                android:id="@+id/pfp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/user"
                android:backgroundTint="@color/yellowish"/>
                <TextView
                    android:id="@+id/username"
                    style="@style/smalltext"
                    android:text="@string/full_name"/>
                <Button
                    android:id="@+id/edit"
                    style="@style/normal_button"
                    android:text="@string/edit"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/profile_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginVertical="18dp"
                android:layout_marginHorizontal="18dp">

                <TextView
                    style="@style/user_profile_info"
                    android:text="@string/full_name"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/firstname"
                        style="@style/style_edit_text_plain"
                        android:layout_weight="1"
                        android:hint="@string/firstname"/>
                    <EditText
                        android:id="@+id/lastname"
                        style="@style/style_edit_text_plain"
                        android:layout_weight="1"
                        android:hint="@string/Lastname"/>
                </LinearLayout>


                <TextView
                    style="@style/user_profile_info"
                    android:text="@string/phone_number"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/fphone"
                        style="@style/style_edit_text_plain"
                        android:layout_weight="6"
                        android:hint="@string/_213"/>
                    <EditText
                        android:id="@+id/phone"
                        style="@style/style_edit_text_plain"
                        android:layout_weight="1"
                        android:hint="@string/phone_number"/>
                </LinearLayout>

                <TextView
                    style="@style/user_profile_info"
                    android:text="@string/email"/>
                <EditText
                    android:id="@+id/email"
                    style="@style/style_edit_text_plain"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

                <TextView
                    style="@style/user_profile_info"
                    android:text="@string/address"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/country"
                        style="@style/style_edit_text_plain"
                        android:layout_weight="1"
                        android:hint="@string/country"/>
                    <EditText
                        android:id="@+id/city"
                        style="@style/style_edit_text_plain"
                        android:layout_weight="1"
                        android:hint="@string/city"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer"
        style="@style/footer">
        <Button
            android:id="@+id/home"
            style="@style/home"/>
        <Button
            android:id="@+id/list_requests"
            style="@style/History"/>
        <Button
            android:id="@+id/profile"
            style="@style/profile"/>
    </RelativeLayout>

</RelativeLayout>