<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    android:id="@+id/background">
    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:src="@drawable/whitelogo"
            android:scaleType="fitCenter"/>
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logoshadow"
            android:scaleType="fitCenter"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/userdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_below="@id/logo"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full name:"
            android:gravity="left"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/signup_button_background"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"/>
            <EditText
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/signup_button_background"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center"
                android:hint="@string/Lastname"
                android:inputType="textPersonName"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_"
            android:gravity="left"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/fphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_button_background"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center"
                android:inputType="phone"
                android:hint="@string/_213"
                android:text="@string/_213"
                android:textAlignment="center"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/signup_button_background"
                android:padding="16dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center"
                android:hint="@string/_000_000_000"
                android:inputType="phone"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_"
            android:gravity="left"/>
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_button_background"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:gravity="center"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/codedata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottons"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="240dp"
        android:visibility="gone">
        <TextView
            android:id="@+id/codetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codee"
            android:gravity="left"/>
        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_button_background"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="16sp"
            android:gravity="center"
            android:hint="@string/_00_00_00"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp">
        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/signup_button_background"
            android:text="@string/Next"
            android:textColor="#000000"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="left"
                android:text="@string/resend"
                android:visibility="gone"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_marginBottom="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="right"
                    android:text="@string/you_already_have_an_account"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="right"
                    android:text="@string/sign_in"
                    android:textColor="@color/yellowish"/>
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="180dp"
            android:layout_height="2dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>